[package]
name = "wlt-mitm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color-eyre = "0.6.3"
ratatui = "0.28.1"
snafu = "0.8.5"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wayland-backend = "0.3.7"
wayland-client = "0.31.6"
